kubernetes/apps/games/palworld-server-dashboard/app/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: palworld-server
  annotations:
    tailscale.com/tailnet-fqdn: pal-world-server.tail7ad738.ts.net
spec:
  type: ExternalName
  externalName: placeholder
  ports:
    - name: game
      port: 8211
      targetPort: 8211
      protocol: UDP
    - name: api
      port: 8212
      targetPort: 8212
      protocol: TCP
