kubernetes/apps/games/palworld-server-dashboard/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: palworld-server-dashboard
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      dns:
        query-name: palworld-dashboard.unscfleet.com
        query-type: A
      url: 1.1.1.1
      conditions:
        - len([BODY]) == 0

spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - palworld-dashboard.unscfleet.com
  rules:
    - backendRefs:
        - name: palworld-server-dashboard
          port: 3000
